# ros2-navigation-rosject

pose_recorder/: package.xml  setup.cfg  setup.py
pose_recorder/config/: spot_list.yaml
pose_recorder/pose_recorder/: pose_recorder.py
project_localization/: package.xml  setup.py
project_localization/config/: localiser_config.rviz  spots.yaml
project_localization/launch/: localization.launch.py
project_localization/project_localization/: sport_recorder.py
project_mapping/: setup.py
project_mapping/config/: turtlebot_area.pgm  turtlebot_area.yaml
project_mapping/launch/: cartographer.launch.py  map_server.launch.py
project_path_planning/: package.xml  setup.py
project_path_planning/config/: path_planning_config.rviz
project_path_planning/launch/: path_planner.launch.py
spot_recorder/: CMakeLists.txt  package.xml
spot_recorder/launch/: spots_to_file.launch.py
spot_recorder/src/: spots_to_file.cpp  spots_to_file2.cpp
